correct syntax for mailslurp env

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -13,5 +13,5 @@ jobs:
     - name: Cypress Execution
       uses: cypress-io/github-action@v6
       env:
-        CYPRESS_MAILSLURP_API_KEY: $${{secrets.CYPRESS_MAILSLURP_API_KEY}}
+        CYPRESS_MAILSLURP_API_KEY: ${{secrets.CYPRESS_MAILSLURP_API_KEY}}
             
